--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
     "pinia": "^2.1.3",
     "vant": "^4.5.0",
     "vue": "^3.3.4",
