--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
+    "axios": "^1.4.0",
     "pinia": "^2.1.3",
     "vant": "^4.5.0",
     "vue": "^3.3.4",
